Add cava and configure theme

--- a/home/modules/assets/.config/hyprdynamicmonitors/hyprconfigs/docked.go.tmpl
+++ b/home/modules/assets/.config/hyprdynamicmonitors/hyprconfigs/docked.go.tmpl
@@ -1,2 +1,5 @@
-monitor = desc:AU Optronics 0x3CAD,disable
-monitor = desc:Dell Inc. DELL U3421WE HW7M653,3440x1440@59.97,1920x0,1.00000000,transform,0
+# <<<<< TUI AUTO START
+monitor=desc:AU Optronics 0x3CAD,disable
+monitor=desc:Dell Inc. DELL U3421WE HW7M653,3440x1440@59.97300,1920x0,1.00000000,transform,0,vrr,0
+monitor=desc:Philips Consumer Electronics Company PHL 272B7QPJ AU02045013808,2560x1440@59.95100,-690x0,1.00000000,transform,0,vrr,0
+# <<<<< TUI AUTO END
